# tomorrow_tg_bot

./: Makefile  README.md
app/: app.env  pyproject.toml  run.py
app/bot/: bot.py  main.py  router.py  settings.py
